--- a/unpackaged/main/default/layouts/Participant__c-PII Compliant.layout-meta.xml
+++ b/unpackaged/main/default/layouts/Participant__c-PII Compliant.layout-meta.xml
@@ -79,6 +79,10 @@
                 <behavior>Edit</behavior>
                 <field>Participant_Dropped_Out__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Readonly</behavior>
+                <field>Conditions__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns/>
         <style>TwoColumnsTopToBottom</style>
@@ -129,7 +133,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h1I000002zWDD</masterLabel>
+        <masterLabel>00h4E000000eNNy</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
