--- a/force-app/main/default/aura/StudyListView/StudyListView.cmp
+++ b/force-app/main/default/aura/StudyListView/StudyListView.cmp
@@ -76,11 +76,11 @@
 
             <div class="slv-items-panel">
                 <div class="{!(v.isSearchResume ? 'slds-hide' : '') + ' rr-simple-white-panel'}">
-                    <div class="slds-grid slds-wrap" style="padding-left: 80px;">
-                        <div class="slds-col slds-size_1-of-2" style="padding-top: 22px;">
+                    <div class="slds-grid slds-wrap slds-grid_align-center slds-grid_vertical-align-center" style="height: 100%;">
+                        <div class="slds-col slds-medium-size_1-of-2 slds-size_1-of-1 slv-padded-panel-left slv-header-item">
                             <span class="header-white-panel">Don't see a study that you could refer your patients to?</span>
                         </div>
-                        <div class="slds-col slds-size_1-of-2" style="padding-top: 16px;">
+                        <div class="slds-col slds-medium-size_1-of-2 slds-size_1-of-1 slv-padded-panel-right slv-header-item">
                             <button class="apollo-btn primary search-more-btn" onclick="{!c.switchToSearchResume}">
                                 Search for More Studies
                             </button>
