--- a/force-app/main/default/aura/StudyListViewItem/StudyListViewItem.css
+++ b/force-app/main/default/aura/StudyListViewItem/StudyListViewItem.css
@@ -12,7 +12,7 @@
     padding-right: 17px;
 }
 
-.THIS .slvi-name-section,
+/*.THIS .slvi-name-section,*/
 .THIS .slvi-objective-section {
     display: flex;
     justify-content: space-between;
@@ -215,6 +215,12 @@
     color: #297DFD;
 }
 
+.THIS .slvi-status-item{
+    /*text-align: right; */
+    font-size: 14px;
+    color: #666666;
+}
+
 @media (max-width: 768px) {
     .THIS .slvi-buttons {
         flex-direction: column;
@@ -229,3 +235,38 @@
     }
 
 }
+.THIS .slvi-status-icon{
+    height: 20px;
+}
+.THIS .green-icon{
+    fill:#55C200;
+}
+.THIS .orange-icon{
+    fill:#FF9301;
+}
+.THIS .red-icon{
+    fill:#E20000;
+}
+.THIS .blue-icon{
+    fill:#005587;
+}
+@media all and (min-width: 768px) {
+    .THIS .slvi-padded-panel-left {
+        padding-left: 9rem;
+        padding-right: 1rem;
+        text-align: right;
+    }
+
+    .THIS .slvi-padded-panel-right {
+        padding-right: 9rem;
+    }
+}
+@media all and (max-width: 767px) {
+    .THIS .slvi-header-item + .slvi-header-item {
+        margin-top: 16px;
+    }
+}
+.THIS .slvi-search-site-btn {
+    width: 100%;
+}
+
