--- a/force-app/main/default/aura/ResourcesDetailContainer/ResourcesDetailContainer.cmp
+++ b/force-app/main/default/aura/ResourcesDetailContainer/ResourcesDetailContainer.cmp
@@ -13,6 +13,7 @@
     <aura:attribute name="studyName" type="String" default="contRAst-1 Rheumatoid Arthritis Study"/>
     <aura:attribute name="backStudy" type="String"/>
     <aura:attribute name="smallTitle" type="String" default="&nbsp;"/>
+    <aura:attribute name="errorMessage" type="String" default=""/>
 
     <aura:handler name="init" value="this" action="{!c.doInit}"/>
 
@@ -21,9 +22,18 @@
                     backPage="{!v.backStudy}"
                     smallTitle="{!v.smallTitle}"
                     bigTitle="{!v.resourceType}"/>
-        <div class="resource-detail-block">
-            <c:ResourcesDetailItem resource="{!v.resource}"/>
-        </div>
+        <c:RRSpinner aura:id="spinner" showSpinner="true" fixed="true" size="medium"/>
+
+        <aura:if isTrue="{!v.errorMessage}">
+            <div class="resource-error-message resource-detail-block">
+                {!v.errorMessage}
+            </div>
+            <aura:set attribute="else">
+                <div class="resource-detail-block">
+                    <c:ResourcesDetailItem resource="{!v.resource}"/>
+                </div>
+            </aura:set>
+        </aura:if>
         <div class="rr-width-limiter side-padding">
             <c:CommunityFooter/>
         </div>
