--- a/force-app/main/default/aura/ResourcesDetailContainer/ResourcesDetailContainer.css
+++ b/force-app/main/default/aura/ResourcesDetailContainer/ResourcesDetailContainer.css
@@ -5,3 +5,13 @@
     max-width: 628px;
     margin: 36px auto auto;
 }
+.THIS .resource-error-message {
+    /*top: 20%;*/
+    /*position: sticky;*/
+    height: 26px;
+    color: #999999;
+    font-family: "Proxima Nova";
+    font-size: 24px;
+    line-height: 26px;
+    text-align: center;
+}
