--- a/force-app/main/default/aura/Help/Help.css
+++ b/force-app/main/default/aura/Help/Help.css
@@ -98,6 +98,42 @@
     cursor: default!important;
 }
 
+.THIS .req-data-panel {
+    margin-top: 43px;
+    width: 1142px;
+    height: 363px;
+}
+
+.THIS .req-data-title {
+    color: #000000;
+    margin-top: 26px;
+    margin-left: 17px;
+    font-size: 17px;
+    line-height: 36px;
+}
+
+.THIS .req-data-inf-text {
+    margin-left: 19px;
+    color: #666666;
+    font-size: 13px;
+    line-height: 21px;
+}
+
+.THIS .req-data-panel textarea {
+    margin: 32px 13px 19px 17px;
+    border: 0.5px solid #999999;
+    border-radius: 4px;
+    height: 169px;
+    width: 1112px;
+}
+
+.THIS .req-data-button {
+    margin-right: 13px;
+    margin-bottom: 24px;
+    height: 40px;
+    width: 254px;
+    border-radius: 4px;
+}
 
 @media (max-width: 850px) {
     .THIS.h-container {
